update: increase maximum error size limits in budgets configuration

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,6 +50,7 @@
   </po-widget>
 </div>
   <dta-voice 
+    [enableTour]="true"
     labelHeader="Medicamentos"
     [context]="context"
     [jsonReturn]="jsonReturn" 
