Atualização do projeto

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,8 +54,8 @@
     labelHeader="Medicamentos"
     [context]="context"
     [jsonReturn]="jsonReturn" 
-    [idDtaVoice]="idDtaVoice"
-    [idProjeto]="idProjeto"
+    [totvsId]="idDtaVoice"
+    [projectId]="idProjeto"
     [user]="user"
     [contingency]="contingency"
     (informacaoEnviada)="receberInformacao({ menssagem
